added web files

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Quote Machine</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/index.js"></script>
+    <script src="assets/js/index.js" type="module"></script>
 </head>
 <body>
-    
+    <main>
+        <div id="quote-box">
+            <div id="quote"></div>
+            <br>
+            <span id="author"></span>
+            <div>
+                <a id="tweet-quote" title="tweet a quote!">t</a>
+                <a id="tumblr-quote" title="Post this quote on tumblr!">t</a>
+                <button type="submit" id="new-quote">New quote</button>
+            </div>
+        </div>
+        <div>by Prasad</div>
+    </main>
 </body>
 </html>
